--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "jam": {
     "dependencies": {
+      "jquery":               "1.9.x",
       "backbone":             "0.9.x",
       "domReady":             "2.0.x",
       "bootstrap-modal":      "2.3.x",
