--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
       "hbt":                  "0.0.x",
       "spin-js":              "1.2.5-jam.1",
       "require-css":          "0.1.x",
-      "require-less":         "0.0.1"
+      "require-less":         "0.0.1",
+      "async":                "0.2.x"
     }
   },
   "devDependencies": {
