upgrade grunt to 0.4.x, update grunt-s3 to 0.2.x add more explicit instructions on how to get started and deploy

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   },
   "devDependencies": {
     "requirejs": "latest",
-    "grunt": "0.3.x",
-    "grunt-s3": "0.0.9",
+    "grunt": "0.4.x",
+    "grunt-s3": "0.2.x",
     "grunt-contrib-mincss": "0.3.x",
     "jsdom": "0.3.x",
     "wrench": "1.4.4",
