--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
       "require-css": "0.1.x",
       "require-less": "0.0.1",
       "jquery-cookie": "1.2.x",
-      "async": "0.2.x"
+      "async": "0.2.x",
+      "jquery-transit": "0.9.x"
     }
   },
   "devDependencies": {
