--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
       "bootstrap-modal": "2.3.x",
       "bootstrap-button": "2.3.x",
       "hbt": "0.0.x",
+      "handlebars": "1.0.0-beta.6.jam.1",
       "spin-js": "1.2.5-jam.1",
       "require-css": "0.1.x",
       "require-less": "0.0.1",
